fixed font size on IOS

--- a/src/components/recipe.module.css
+++ b/src/components/recipe.module.css
@@ -296,12 +296,13 @@ table{
     text-align:left;
     background-color:rgba(177, 23, 23, 0)!important;
   }
-
+  /* Heading */
   #tableIngredients{
     border-radius:0px!important;
     border-top-left-radius:10px!important;
     border-top-right-radius:10px!important;
     background-color:rgba(46, 109, 65, 0.865)!important;
+
   }
   #tableIngredients h2{
     background-color:rgba(0,0,0,0)!important;
@@ -341,7 +342,7 @@ table{
     border-right:0px solid white !important;
     padding-right:10px!important;
     padding-left:10px!important;
-    font-size:1.2rem!important;
+    font-size:12pt!important;
     font-size:clamp(10px, 1.2rem, 4vw)!important;
     overflow-x:scroll;
     border:0px solid black;
@@ -388,7 +389,7 @@ table{
     border-top-right-radius:0px!important;
     border-radius:0px!important;
     border-bottom-left-radius:10px!important;
-    font-size:1rem;
+    font-size:12pt!important;
     font-size:clamp(8px, 1rem, 4.3vw);
     color:rgb(21, 71, 28)!important;
     padding-left:4px!important;
